--- a/templates/jormungandr/settings.py.jinja
+++ b/templates/jormungandr/settings.py.jinja
@@ -39,7 +39,11 @@ LOGGER = {
         'json': {
             '()': 'jormungandr.logging_utils.CustomJsonFormatter',
             'format': '{{ env.jormungandr_log_format }}',
-            'extras': '{{ env.jormungandr_log_extras }}',
+	    {% if env.jormungandr_log_extras %}
+            'extras': {{ env.jormungandr_log_extras }},
+	    {% else %}
+	    'extras': None,
+	    {% endif %}
         }
     },
     'filters': {
