add configuration for siri cache timeout

--- a/templates/jormungandr/settings.py.jinja
+++ b/templates/jormungandr/settings.py.jinja
@@ -108,6 +108,7 @@ CACHE_CONFIGURATION = {
     'TIMEOUT_AUTHENTICATION': {{env.jormungandr_cache_timeout}},
     'TIMEOUT_PARAMS': {{env.jormungandr_cache_timeout}},
     'TIMEOUT_TIMEO': {{env.jormungandr_timeo_cache_timeout}},
+    'TIMEOUT_SIRI': {{env.jormungandr_siri_cache_timeout}},
 }
 
 
