--- a/templates/kraken/kraken.ini.jinja
+++ b/templates/kraken/kraken.ini.jinja
@@ -15,6 +15,9 @@ raptor_cache_size = {{instance.cache_raptor}}
 is_realtime_enabled = true
 kirin_timeout = {{env.kirin_timeout}}
 {% endif %}
+{% if instance.kraken_prometheus_binding %}
+metrics_binding = {{instance.kraken_prometheus_binding}}
+{% endif %}
 
 [LOG]
 log4cplus.rootLogger={{env.kraken_log_level}}, ALL_MSGS
