Add an auto configuratation feature for prometheus

--- a/templates/kraken/kraken.ini.jinja
+++ b/templates/kraken/kraken.ini.jinja
@@ -15,8 +15,8 @@ raptor_cache_size = {{instance.cache_raptor}}
 is_realtime_enabled = true
 kirin_timeout = {{env.kirin_timeout}}
 {% endif %}
-{% if instance.kraken_prometheus_binding %}
-metrics_binding = {{instance.kraken_prometheus_binding}}
+{% if instance.kraken_prometheus_port %}
+metrics_binding = 0.0.0.0:{{instance.kraken_prometheus_port}}
 {% endif %}
 
 [LOG]
