DEVOPP-1299-add-LimitNOFILE-systemd

--- a/templates/kraken/systemd_kraken.jinja
+++ b/templates/kraken/systemd_kraken.jinja
@@ -7,6 +7,7 @@ Description=start kraken_{{instance}}
 After=network.target
 
 [Service]
+LimitNOFILE=49152
 Type=simple
 ExecStart={{kraken_base_conf}}/{{instance}}/kraken
 ExecReload=/bin/kill -HUP $MAINPID
