Add enable_realtime_add_trip option to instance

--- a/templates/kraken/kraken.ini.jinja
+++ b/templates/kraken/kraken.ini.jinja
@@ -16,6 +16,9 @@ is_realtime_enabled = true
 kirin_timeout = {{env.kirin_timeout}}
     {% if instance.enable_realtime_add %}
     is_realtime_add_enabled = true
+        {% if instance.enable_realtime_add_trip %}
+        is_realtime_add_trip_enabled = true
+        {% endif %}
     {% endif %}
 {% endif %}
 {% if instance.kraken_prometheus_port %}
