Add EQUIPMENT_DETAILS_PROVIDERS configuration to jormun's settings.py

--- a/templates/jormungandr/settings.py.jinja
+++ b/templates/jormungandr/settings.py.jinja
@@ -148,3 +148,8 @@ BSS_PROVIDER = {{env.jormungandr_bss_provider}}
 {% if env.jormungandr_car_park_provider %}
 CAR_PARK_PROVIDER = {{env.jormungandr_car_park_provider}}
 {% endif %}
+
+{% if env.jormungandr_equipment_details_providers %}
+EQUIPMENT_DETAILS_PROVIDERS = {{env.jormungandr_equipment_details_providers}}
+{% endif %}
+
