Add condition for enable ZMQ_DEFAULT_SOCKET_TYPE

--- a/templates/jormungandr/settings.py.jinja
+++ b/templates/jormungandr/settings.py.jinja
@@ -19,7 +19,9 @@ SQLALCHEMY_DATABASE_URI='postgresql://{{env.tyr_postgresql_user}}:{{env.tyr_post
 PUBLIC={{env.jormungandr_is_public}}
 
 # Define ZMQ default socket type
+{% if env.jormungandr_zmq_default_socket_type %}
 ZMQ_DEFAULT_SOCKET_TYPE='{{ env.jormungandr_zmq_default_socket_type }}'
+{% endif %}
 
 {% if env.sqlalchemy_pool %}
 #Desactivation pool sql on jorgmungandr
