--- a/templates/kraken/kraken.ini.jinja
+++ b/templates/kraken/kraken.ini.jinja
@@ -44,7 +44,7 @@ log4cplus.appender.ALL_MSGS.layout.ConversionPattern={% raw %}[%D{%y-%m-%d %H:%M
 log4cplus.appender.ALL_MSGS.layout=log4cplus::PatternLayout
 
 [BROKER]
-host = {{env.rabbitmq_host}}
+host = {{env.rabbitmq_host_api}}
 port = {{env.rabbitmq_port}}
 username = {{env.kraken_broker_username}}
 password = {{env.kraken_broker_password}}
