--- a/templates/tyr/instance.ini.jinja
+++ b/templates/tyr/instance.ini.jinja
@@ -17,7 +17,7 @@ is-free          = false
 
 rt-topics = ,
 
-exchange-name     = {{env.tyr_broker_exchange}}
+exchange-name    = {{env.rabbitmq_tyr_exchange}}
 
 [database]
 host     = {{env.ed_postgresql_database_host}}
