Split brokers used for Celery and Kraken
Celery and Kraken are using Rabbimq, but for complete different purpose.
The service used to be hosted on the exact same machine, which is not
the case anymore.

Hence the need to address 2 different brokers:
* One for Tyr to interact with Celery: CELERY_BROKER_URL
* One for Tyr to interact with the Krakens: KRAKEN_BROKER_URL

--- a/templates/tyr/instance.ini.jinja
+++ b/templates/tyr/instance.ini.jinja
@@ -17,7 +17,7 @@ is-free          = false
 
 rt-topics = ,
 
-exchange-name    = {{env.rabbitmq_tyr_exchange}}
+exchange-name    = {{env.rabbitmq_kraken_exchange}}
 
 [database]
 host     = {{env.ed_postgresql_database_host}}
