--- a/templates/tyr/settings.py.jinja
+++ b/templates/tyr/settings.py.jinja
@@ -11,6 +11,7 @@ import logging
 #the default vhost is "/" so the URL end with *two* slash
 #http://docs.celeryproject.org/en/latest/configuration.html#std:setting-BROKER_URL
 CELERY_BROKER_URL = 'amqp://{{env.rabbitmq_tyr_user}}:{{env.rabbitmq_tyr_pass}}@{{env.rabbitmq_tyr_host}}:{{env.rabbitmq_tyr_port}}/{{env.rabbitmq_tyr_vhost}}'
+KRAKEN_BROKER_URL = 'amqp://{{env.rabbitmq_kraken_user}}:{{env.rabbitmq_kraken_pass}}@{{env.rabbitmq_kraken_host}}:{{env.rabbitmq_kraken_port}}/{{env.rabbitmq_kraken_vhost}}'
 
 #URI for postgresql
 # postgresql://<user>:<password>@<host>:<port>/<dbname>
